# orbit

./: .gitignore  ORBIT.pptx  ORBit Flowchart.drawio  README.md  README_DOCKER.md  SETUP_INSTRUCTIONS.txt  TOR POC #1 diagram.drawio  first_iteration.pptx  installations.txt  launch.bat  requirements.txt  seconed_iteration.pptx  ‏‏src - קיצור דרך.lnk
POC-python/: requirements.txt
src/: CMakeLists.txt  Docker-compose.yaml  Dockerfile  build.bat  client.py  docker_ip_inishializer.py  global_consts.py  install_boost.bat  main.cpp  node.py  server.py  vcpkg_install_boost.bat
src/Client/: Client.sln  Client.vcxproj  Client.vcxproj.filters
src/Node/: 1.txt  3.txt  Node.sln  Node.vcxproj  Node.vcxproj.filters  build.bat  build_node_image.bat
src/Server/: Server.sln  Server.vcxproj  Server.vcxproj.filters
src/cryptography/: cryptography.cpp  math_utils.py
src/dockerFiles/: Docker-compose.yaml  Dockerfile  Dockerfile_  adjust_ports_to_talk_in_subnet.py  docker_build_node.bat  docker_ip_inishializer.py  docker_node_info_init.py  docker_node_ip_changer.py  src.cpp
src/networking/: WSAInitializer.cpp  WSAInitializer.h  client.cpp  client.h  docker_manager.cpp  docker_manager.h  node.cpp  node.h  server.cpp  server.h  tcpConnection.hpp  tcpServer.h
src/networking/handlers/: CloseConnectionHandler.cpp  CloseConnectionHandler.h  DeleteCircuitRequestHandler.cpp  DeleteCircuitRequestHandler.h  EcdheKeyExchangeRequestHandler.cpp  EcdheKeyExchangeRequestHandler.h  EcdheKeyExchangeRequestHndler.cpp  EcdheKeyExchangeRequestHndler.h  HttpGetRequestHandler.cpp  HttpGetRequestHandler.h  IRequestHandler.h  LinkRequestHandler.cpp  LinkRequestHandler.h  NodeOpeningHandler.cpp  NodeOpeningHandler.h  NodeRequestHandler.cpp  NodeRequestHandler.h  RsaKeyExchangeRequestHandler.cpp  RsaKeyExchangeRequestHandler.h  TorRequestHandler.cpp  TorRequestHandler.h  TorResponseAjuster.cpp  TorResponseAjuster.h
src/networking/server/: server.cpp  server.hpp
src/test/: CMakeLists.txt  build.bat  main.cpp
src/test/AES_Test/: AES.cpp  AES.h  AES_Test.cpp  AES_Test.sln  AES_Test.vcxproj  AES_Test.vcxproj.filters
src/test/Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  main.cpp
src/test/Project2/: Project2.sln  Project2.vcxproj  Project2.vcxproj.filters  Source.cpp
src/utils/: AES.cpp  AES.h  DeserializerRequests.cpp  DeserializerRequests.h  DeserializerResponses.cpp  DeserializerResponses.h  ECDHE.cpp  ECDHE.h  Helper.cpp  Helper.h  RSA.cpp  RSA.h  RequestInfo.hpp  Requestes.hpp  Responses.hpp  SerializerRequests.cpp  SerializerRequests.h  SerializerResponses.cpp  SerializerResponses.h  build_msges.h  get_data_from_msg.h  json.hpp  prime_numbers_manager.cpp  prime_numbers_manager.h  utils.cpp  utils.hpp
src/utils/pipe/: Pipe.h  backPipeInstraction.txt
(+27 files in other folders)
